--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://lh3.googleusercontent.com/proxy/XeIlgfC25w1bxxuEEJF0VBKbK838LxLbfuXoDd1SMtfdPM6wl-okNW9orkl7mvPLynFgEy_xwLdjm2uE5WzJBouJnPcYe88wt618yfJ8zY3e2tfp9mGEUaoEpJkwPqo6kbeTYzmKwGUZyohltAE" />
+    <link rel="icon" href="popcorn-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/proxy/XeIlgfC25w1bxxuEEJF0VBKbK838LxLbfuXoDd1SMtfdPM6wl-okNW9orkl7mvPLynFgEy_xwLdjm2uE5WzJBouJnPcYe88wt618yfJ8zY3e2tfp9mGEUaoEpJkwPqo6kbeTYzmKwGUZyohltAE" />
+    <link rel="apple-touch-icon" href="popcorn-favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
